Added navigation bar and styled it for large screens

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mini-Link : The easiest way to shorten your urls</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Artifika&family=Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code&display=swap" rel="stylesheet">
 </head>
 <body>
 <nav id="nav">
-<div class="logo">
-  <h3 class="brand-name">mini-link</h3>
+<div>
+  <h3 class="logo">mini link</h3>
 </div>
 <ul id="nav-list">
   <li><a href="#" class="nav-link">Why Us?</a></li>
@@ -19,10 +23,9 @@
  
 </ul>
 <ul class="account-list">
-  <li><a href="#">Login</a></li>
-  <li><a href="#">Sign Up</a></li>
-  <li><a href="#">Get Quote</a></li>
-
+  <li><a href="#" class="login">Login</a></li>
+  <li><a href="#" class='signup'>Sign Up</a></li>
+  <li><a href="#" class='quote'> Get Quote</a></li>
 </ul>
 </nav>
 <section id="main">
