updated homepage and responsive navbar

--- a/index.html
+++ b/index.html
@@ -49,14 +49,18 @@
       </nav>
   </header>
 
-<section id="main">
-  <section class="heading">
-    <h1>Mini-Link</h1>
+<section id="hero">
+ 
+  <section class="title">
+    <h1>mini link</h1>
+    <p class="sub">Shorter urls, bigger results</p>
+    <p class="caption">A URL shortener that boost your online business and grows your customer base</p>
   </section>
   <form id="form">
     <input type="text" id="url-input" placeholder="Enter url here">
     <input type="submit" value="Shorten url" class="btn">
   </form>
+  
 </section>
 <script src='index.js'></script>
 <script src="menu.js"></script>
