fixed error message bug

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
     <input type="text" id="url-input" placeholder="Enter url here">
     <input type="submit" value="Shorten url" class="btn">
   </form>
+
+  <div class="result">
+    <input type="text" class="message" disabled>
+  </div>
   
 </section>
 <script src='index.js'></script>
-<script src="menu.js"></script>
 </body>
 </html>
